white space fix test

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,10 @@
 	font-family: "PT Sans", sans-serif;
 }
 
+body {
+	background-color: black;
+}
+
 // Logo
 #logo {
 	width: 230px;
@@ -20,7 +24,7 @@
 }
 
 .main-content {
-	padding-top: 120px;
+	padding-top: 140px;
 }
 
 // Header
